# MediaDigest

./: .gitignore  INSTALL.md  pyproject.toml
deploy/: .env.example
deploy/core/: Dockerfile  docker-compose.yml
deploy/frontends/owui/: bundle.toml  docker-compose.yml  setup.py
deploy/llm/ollama/: bundle.toml  docker-compose.gpu.yml  docker-compose.yml  setup.py
digestcore/: __init__.py  bootstrap.py  client.py  config.py  db.py  engine.py  feedback.py  marker.py  models.py  net.py  profile.py  runner.py  scheduler.py  sources.py  subscriptions.py
digestcore/adapters/: __init__.py  arxiv_hf.py  catalog_store.py  music_catalog.py  rss_news.py
digestcore/data/: options.default.json  sources.default.json
digestcore/delivery/: __init__.py  base.py  ntfy.py  owui.py  stdout.py
digestcore/service/: __init__.py  auth.py  server.py
docs/: README.production.md
interfaces/cli/: __main__.py
interfaces/owui/: digest_pipeline.py  digest_setup_assistant.md
interfaces/owui/functions/: digest_less_like_this.py  digest_more_like_this.py
interfaces/owui/tools/: digest_manager_tool.py
interfaces/service/: __init__.py  __main__.py
scripts/: build_music_catalog.py  check_secrets.py  fetch_catalog.py  install.py  install_owui.py  make_production.py  preflight_release.sh  redeploy.sh
tests/: test_adapter_retry.py  test_admin.py  test_cli_client.py  test_deploy_sync.py  test_installer.py  test_music_catalog.py  test_notifier.py  test_owui_client.py  test_path_encoding.py  test_service.py  test_service_run.py  test_smoke.py  test_source_health.py
(+1 files in other folders)
